tests/transpiler/x/ocaml/map_literal_dynamic.ml
(* Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:38 +0700 *)

let () =
  let x = ref 3 in
  let y = ref 4 in
  let m = ref [("a", !x); ("b", !y)] in
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_int (List.assoc "a" !m)); string_of_int (List.assoc "b" !m))]));
